--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,9 +1,57 @@
 /*---------Шрифты------------*/
 
 @font-face {
-    font-family: 'Vazirmatn';
-    src: url('/fonts/Vazirmatn-VariableFont_wght.woff2') format('woff2-variations');
-    font-weight: 100 900;
-    font-display: swap;
-    font-style: normal;
+  font-family: 'Vazirmatn';
+  font-weight: 100;
+  src: url('/fonts/Vazirmatn-Thin.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-Thin.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Vazirmatn';
+  font-weight: 200;
+  src: url('/fonts/Vazirmatn-ExtraLight.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-ExtraLight.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Vazirmatn';
+  font-weight: 300;
+  src: url('/fonts/Vazirmatn-Light.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-Light.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Vazirmatn';
+  font-weight: 400;
+  src: url('/fonts/Vazirmatn-Regular.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Vazirmatn';
+  font-weight: 500;
+  src: url('/fonts/Vazirmatn-Medium.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Vazirmatn';
+  font-weight: 600;
+  src: url('/fonts/Vazirmatn-SemiBold.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-SemiBold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Vazirmatn';
+  font-weight: 700;
+  src: url('/fonts/Vazirmatn-Bold.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-Bold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Vazirmatn';
+  font-weight: 800;
+  src: url('/fonts/Vazirmatn-ExtraBold.woff2') format('woff2'),
+       url('/fonts/Vazirmatn-ExtraBold.woff') format('woff');
 }
