--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,23 @@ img {
     margin: 0 auto;
     background-color: var(--white);
 }
+
+.main_button {
+    background: var(--yellow-gradient);
+    border-radius: 30px;
+    height: 40px;
+    padding: 4px;
+
+    .content {
+        border: 1px dashed var(--brown);
+        width: 100%;
+        height: 100%;
+        border-radius: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;    
+        font-size: 15px;
+        padding: 0 20px;
+    }
+}
