--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,15 @@
 header {
-    
+    background: url(/images/header_back.jpg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100px;
+
+    .container {
+        height: 100%;
+        background-color: transparent;
+        display: flex;
+        justify-content: space-between;
+    }
 }
