--- a/css/header.css
+++ b/css/header.css
@@ -5,11 +5,78 @@ header {
     background-size: cover;
     width: 100%;
     height: 100px;
+    padding: 0 20px;
 
     .container {
         height: 100%;
         background-color: transparent;
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+
+        @media screen and (max-width: 830px) {
+            justify-content: flex-end;
+            align-items: flex-start;
+            padding-top: 20px;
+            gap: 5px;
+        }
+
+        nav {
+            display: flex;
+            gap: 30px;
+
+            a {
+                display: block;
+                color: var(--white);
+                width: min-content;
+                line-height: 1.5;
+                font-weight: 700;
+                text-align: center;
+                font-size: clamp(12px, 1vw, 15px);
+
+                & span {
+                    white-space: nowrap;
+                }
+            }
+
+            @media screen and (max-width: 830px) {
+                display: none;
+            }
+        }
+
+        .main_button.detail {
+            @media screen and (max-width: 830px) {
+                display: none;
+            }
+        }
+
+        .phone {
+            @media screen and (min-width: 831px) {
+                display: none;
+            }
+        }
+
+        .burger_btn {
+            display: none;
+            width: 55px;
+            height: 55px;
+            background-color: var(--brown);
+            border-radius: 50%;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 6px;
+
+            span {
+                width: 45%;
+                height: 2px;
+                background-color: var(--white);
+            }
+
+            @media screen and (max-width: 830px) {
+                display: flex;
+            }
+        }
     }
 }
