--- a/css/home/header.css
+++ b/css/home/header.css
@@ -4,7 +4,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     padding: 0 20px;
 
     .container {
