--- a/css/home/offer.css
+++ b/css/home/offer.css
@@ -1,8 +1,10 @@
 .offer {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     gap: 60px;
+    z-index: 2;
 
     @media screen and (max-width: 830px) {
         justify-content: center;
