--- a/css/home/terms.css
+++ b/css/home/terms.css
@@ -1,4 +1,5 @@
 .terms {
+    position: relative;
     font-size: 10px;
     max-width: 110px;
     margin: 30px auto 35px auto;
@@ -6,6 +7,7 @@
     text-align: center;
     color: var(--black);
     line-height: 1.5;
+    z-index: 2;
 
     span {
         white-space: nowrap;
