--- a/css/about/about.css
+++ b/css/about/about.css
@@ -1,8 +1,206 @@
 
-
+/* Шапка */
 header {
     width: 100%;
     max-width: 965px;
-    max-width: 0 auto;
+    margin: 0 auto;
     margin-top: 14px;
+    background: var(--yellow-gradient);
+    padding: 20px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+
+    img {
+        width: 100%;
+        max-width: 120px;
+
+        @media screen and (max-width: 991px) {
+            max-width: 110px;
+        }
+        
+        @media screen and (max-width: 768px) {
+            max-width: 80px;
+        }
+
+        @media screen and (max-width: 500px) {
+            max-width: 50px;
+        }
+    }
+
+    @media screen and (max-width: 991px) {
+        max-width: 1000px;
+        border-radius: 0;
+        gap: 20px;
+        margin-top: 0;
+    }
+
+    .description {
+        p {
+            font-size: 28.5px;
+            font-weight: 700;
+            line-height: 120%;
+            white-space: nowrap;
+
+            &.main {
+                font-size: 52px;
+            }
+
+            &.bottom {
+                font-size: 22px; 
+            }
+
+            @media screen and (max-width: 991px) {
+                font-size: 25px;
+
+                &.main {
+                    font-size: 45px;
+                }
+
+                &.bottom {
+                    font-size: 19px; 
+                }
+            }
+            
+            @media screen and (max-width: 768px) {
+                font-size: 15.5px;
+
+                &.main {
+                    font-size: 28px;
+                }
+
+                &.bottom {
+                    font-size: 12px; 
+                }
+            }
+
+            @media screen and (max-width: 500px) {
+                font-size: 11px;
+
+                &.main {
+                    font-size: 20px;
+                }
+
+                &.bottom {
+                    font-size: 8.5px; 
+                }
+            }
+        }
+    }
+}
+
+.container {
+    max-width: 850px;
+    padding: 20px;
+    padding-bottom: 50px;
+}
+
+/* Города */
+
+.cities_list {
+    font-size: 11px;
+    text-align: center;
+    line-height: 150%;
+    font-weight: 300;
+
+    @media screen and (max-width: 991px) {
+        font-size: 7px;
+    }
+}
+
+.contry {
+    display: flex;
+    align-items: flex-end;
+
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+    }
+    .description {
+        padding: 45px 0px 70px 15px;
+        min-height: 280px;
+
+        @media screen and (max-width: 768px) {
+            min-height: 10px;
+            padding: 10px 0px 0 0px;
+        }
+        
+        h1 {
+            font-weight: 900;
+            font-size: clamp(40px, 6dvw, 60px);
+            margin-bottom: 5px;
+            white-space: nowrap;
+        }
+        h2 {
+            font-weight: 900;
+            font-size: clamp(22px, 3.5dvw, 32px);
+            white-space: nowrap;
+        }
+        
+        p {
+            margin-top: 20px;
+            font-weight: 900;
+            font-size: clamp(25px, 4dvw, 39px);
+            white-space: nowrap;
+        }
+
+        @media screen and (max-width: 768px) {
+            h1 {
+                font-size: 60px;
+            }
+
+            h2 {
+                font-size: 32px;
+            }
+            p {
+                font-size: 39px;
+            }
+        }
+    }    
+
+    .image {
+        position: relative;
+        flex: 1;
+        min-height: 200px;
+
+        .main {
+            width: 120%;
+            max-width: 510px;
+            position: absolute;
+            bottom: 0;
+            left: -10px;
+
+            @media screen and (max-width: 991px) {
+                width: 100%;
+            }
+
+            @media screen and (max-width: 768px) {
+                width: 100%;
+                position: static;
+            }
+        }
+    }
+}
+
+ .banners {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 17px;
+
+    .banner_item {
+        flex: 1;
+        width: 100%;
+        text-align: center;
+        font-size: clamp(20px, 2.5dvw, 25px);
+        font-weight: 900;
+        background-color: var(--green);
+        color: var(--white);
+        border-radius: 80px;
+        padding: 15px 28px;
+        white-space: nowrap;
+    }
 }
