--- a/css/home/home.css
+++ b/css/home/home.css
@@ -1,3 +1,6 @@
+
+/* Hero */
+
 .hero {
     width: 100%;
     
@@ -127,6 +130,8 @@
     }
 }
 
+/* Форма заказа */
+
 .offer {
     position: relative;
     display: flex;
@@ -134,6 +139,7 @@
     align-items: flex-end;
     gap: 60px;
     z-index: 2;
+    padding: 0 14px;
 
     @media screen and (max-width: 830px) {
         justify-content: center;
@@ -143,14 +149,90 @@
         position: relative;
         flex: 1;
         max-width: 260px;
-        align-self: stretch;
+        aspect-ratio: 1/1.15;
+        height: max-content;
+
+        @media screen and (max-width: 992px) {
+            max-width: 230px;
+        }
+
+        .decor {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 17px;
+            background-color: var(--grey);
+            transform: rotate(6deg);
+        }
 
         img {
-            position: absolute;
-            bottom: 0;
-            width: 105%;
+            position: relative;
+            width: 100%;
             border-radius: 17px;
-            right: 0;
+        }
+
+        .description {
+            position: absolute;
+            width: 55%;
+            aspect-ratio: 1/1;
+            background: linear-gradient(180.00deg, rgba(252, 165, 3, 1),rgba(251, 210, 133, 1) 140%);
+            /* прямоугольный треугольник с закругленной гипотенузой */
+
+            .price {
+                position: absolute;
+                white-space: nowrap;
+                text-align: center;
+
+                p {
+                    color: var(--brown);
+                    font-size: clamp(18px, 2vw, 25px);
+                    font-weight: 900;
+                }
+                span {
+                    display: block;
+                    font-size: clamp(16px, 2vw, 22px);
+                    font-weight: 600;
+                    color: var(--white);
+                    text-decoration: line-through;
+                    text-decoration-color: var(--grey);
+                }
+            }
+
+            &.left {
+                left: -7px;
+                bottom: -7px;
+                clip-path: polygon(
+                    0% 0%,      /* левый верхний угол — прямой */
+                    0% 100%,    /* левый нижний угол */
+                    100% 100%   /* правый нижний угол */
+                );
+                border-bottom-left-radius: 23px;
+
+                .price {
+                    top: 65%;
+                    left: 35%;
+                    transform: translate(-50%, -50%) rotate(45deg);
+                }
+            }
+
+            &.right {
+                right: -7px;
+                bottom: -7px;
+                clip-path: polygon(
+                    100% 0%,     /* правый верхний угол — прямой */
+                    100% 100%,   /* правый нижний угол */
+                    0% 100%      /* левый нижний угол */
+                );
+                border-bottom-right-radius: 23px;
+
+                .price {
+                    top: 65%;
+                    left: 65%;
+                    transform: translate(-50%, -50%) rotate(-45deg);
+                }
+            }
         }
 
         @media screen and (max-width: 830px) {
@@ -164,13 +246,17 @@
         max-width: 300px;
         min-width: 280px;
         margin-top: 20px;
-
+        
         .back {
             position: absolute;
             top: 20px;
             left: 50%;
             transform: translateX(-50%);
             width: 140%;
+
+            @media screen and (max-width: 500px) {
+                width: 130%;
+            }
         }
         
         .offer_content {
@@ -181,7 +267,7 @@
             gap: 10px;
 
             .logo {
-                max-width: 150px;
+                max-width: 140px;
             }
 
             h2 {
@@ -211,8 +297,31 @@
                 }
             }
         }
+
+        @media screen and (max-width: 500px) {
+            max-width: 270px;
+            min-width: unset;
+
+            .offer_content {
+                
+                .logo {
+                    max-width: 100px;
+                }
+
+                h2 {
+                    max-width: 230px;
+                }
+
+                input {
+                    max-width: 230px;
+                    height: 35px;
+                }
+            }
+        }
     }
 }
+
+/* Условия */
 
 .terms {
     position: relative;
@@ -229,6 +338,8 @@
         white-space: nowrap;
     }
 }
+
+/* Доставка */
 
 .delivery {
     position: relative;
@@ -289,6 +400,8 @@
         z-index: 2;
     }
 }
+
+/* Продукты */
 
 .products {
     position: relative;
@@ -392,6 +505,10 @@
             white-space: nowrap;
             padding: 10px 60px;
             padding-bottom: 5px;
+        }
+
+        @media screen and (max-width: 768px) {
+            bottom: -10px;
         }
 
         @media screen and (max-width: 600px) {
@@ -529,7 +646,6 @@
         }
     }
 }
-
 
 /* Тулупы */
 
@@ -690,7 +806,6 @@
 
 
 /* Галлерея */
-
 
 .gallery {
     position: relative;
