--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*----------Переменные---------*/
 :root {
     /* === Fonts === */
-    --font-main       : 'Vazirmatn', sans-serif;
+    --font-main       : 'TildaSans', sans-serif;
 
     /* === Base Colors === */
     --black           : #000000;
