--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 header {
-    background: url(./images/home/header_back.jpg);
+    background: url(../images/home/header_back.jpg);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
